# bilibili_live_stream_code

./: .gitignore  README.md  buildspec.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: Windows.yml  build-project.yaml  check-format.yaml  main.yml  push.yaml  release.yml
Code/: B站推流码获取工具_UI.py  data.py
backend/: api_service.py  bilibili_api.py  config.py  data.py  dm_pb2.py  get_wbi.py  state.py  util.py
backend/services/: auth_service.py  danmu_service.py  live_service.py  user_service.py  window_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: bridge.js
frontend/src/components/: AccountPanel.vue  ConsolePanel.vue  DanmuPanel.vue  MessageModal.vue  QrCodeLogin.vue  RtmpPanel.vue  Sidebar.vue  StreamPanel.vue  UserAccountModal.vue  WindowControls.vue
frontend/src/styles/: theme.css
main/: GetCookies.py  bilibili_live_stream_code.py
